# master-thesis-sovereign-decision-making

./: .gitignore  README.md  main_benchmarking.py  main_processing.py  pyproject.toml  requirements.txt
main/: experiment_01_data_generation.py  experiment_utils.py  main.py  rankers.py  utils.py  win_rate_ranking.py
notebooks/: 01_np_fiona_setup.ipynb  EXP000_Benchmark.ipynb  EXP000_Benchmark.py  EXP001_Stability.py  EXP002a_Speed.py  EXP002b_SpeedGrid.py  EXP003a_Accuracy.py  EXP003b_AccuracyGrid.py  EXP004b_RobustnessGrid.py  Untitled.ipynb  experiment001-1comparison-expert-Michael.xlsx
src/: config.py
src/benchmarking/: benchmarking_converging_paces.py  benchmarking_fitting_duration.py  benchmarking_ranking_relevance.py  benchmarking_utils.py
src/processing/: processing_comparisons.py  processing_principles.py  processing_utils.py
src/ranking/: __init__.py  _base.py  bradley_terry.py  eigenvector_centrality.py  elo.py  master_ranker.py  true_skill.py  win_rate.py
src/utils/: utils_figs.py  utils_paths.py
src/visualizing/: visualizing_benchmark.py  visualizing_utils.py
