[tool.poetry]
name = "master-thesis-sovereign-decision-making"
version = "0.1.0"
description = "A support github repository for a ranking algorithm"
authors = ["Nicolas Perez <nicoapg1@gmail.com>"]
readme = "README.md"
packages = [{include = "master_thesis_sovereign_decision_making"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
scipy = "^1.15.2"
trueskill = "^0.4.5"
pandas = "^2.2.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
